# eCam

./: POCPresentation.pptx  README.md
14m² factory/14mř factory/: 14m2 factory.rsdoc  Box 283x186x172.rsdoc  QR-code.rsdoc  Shelf C 4000.rsdoc  Shelf C 660.rsdoc  Shelf L 2700.rsdoc  Shelf L 910.rsdoc  Shelf L.rsdoc
14m² factory/eBot/: Angle bottom.rsdoc  Angle top.rsdoc  C-profile 130mm.rsdoc  C-profile 800mm.rsdoc  C-profile cover.rsdoc  eBot.rsdoc  ePlanet 29mm.rsdoc
14m² factory/eBox/: C-profile 230mm.rsdoc  GT3 20x198mm belt.rsdoc  M5 bushing.rsdoc  M5 washer.rsdoc  Shelf C.rsdoc  eBox.rsdoc
14m² factory/ePallet/: 6204-2RS 14Ł47Ť20 bearing.rsdoc  6204-2RS bearing.rsdoc  C-profile 528mm.rsdoc  C-profile cap.rsdoc  Clip 8mm.rsdoc  Cross bar.rsdoc  Drive wheel 180x50.rsdoc  Drive wheel axle.rsdoc  EUR pallet.rsdoc  Fork arm.rsdoc  Fork assembly.rsdoc  Fork wheel assembly.rsdoc  Fork wheel axle.rsdoc  Fork wheel.rsdoc  Fork.rsdoc  Hoist arm.rsdoc  Lift adapter.dxf.rsdoc  Lift adapter.rsdoc  Lift axle.rsdoc  (+10 more)
Business/: TCO-calculator.xlsx
Client/QrPosing/components/modules/: CMakeLists.txt
Client/QrPosing/components/modules/QR_Posing/: QR_Posing.c  QR_Posing.h
Client/QrPosing/components/modules/ai/: who_cat_face_detection.hpp  who_human_face_detection.cpp
Client/QrPosing/components/modules/button/: who_adc_button.c  who_button.c
Client/QrPosing/components/modules/camera/: who_camera.c  who_camera.h
Client/QrPosing/components/modules/imu/: qma7981.c  qma7981.h
Client/QrPosing/components/modules/trace/: who_trace.c
Server/: generate_random_data.py
(+206 files in other folders)
